--- a/Courses/Courses/Courses.csproj
+++ b/Courses/Courses/Courses.csproj
@@ -167,6 +167,12 @@
     <Compile Include="Forms\InfoCourse.Designer.cs">
       <DependentUpon>InfoCourse.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\InfoTeacher.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InfoTeacher.Designer.cs">
+      <DependentUpon>InfoTeacher.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -202,6 +208,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\InfoCourse.resx">
       <DependentUpon>InfoCourse.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InfoTeacher.resx">
+      <DependentUpon>InfoTeacher.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
