--- a/Courses/Courses/Courses.csproj
+++ b/Courses/Courses/Courses.csproj
@@ -235,6 +235,7 @@
     <None Include="Properties\DataSources\Courses.DataModel.CoursesStudentsView.datasource" />
     <None Include="Properties\DataSources\Courses.DataModel.CoursesTeachersView.datasource" />
     <None Include="Properties\DataSources\Courses.DataModel.CoursesView1.datasource" />
+    <None Include="Properties\DataSources\Courses.DataModel.CourseTeacher.datasource" />
     <None Include="Properties\DataSources\Courses.DataModel.CourseView.datasource" />
     <None Include="Properties\DataSources\Courses.DataModel.School.datasource" />
     <None Include="Properties\DataSources\Courses.DataModel.Student.datasource" />
