--- a/Courses/Courses/Courses.csproj
+++ b/Courses/Courses/Courses.csproj
@@ -161,6 +161,12 @@
     <Compile Include="Forms\AddForms\AddTeacherForm.Designer.cs">
       <DependentUpon>AddTeacherForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\EditForms\EditBindStudent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EditForms\EditBindStudent.Designer.cs">
+      <DependentUpon>EditBindStudent.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\EditForms\EditTopicForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -259,6 +265,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddForms\AddTeacherForm.resx">
       <DependentUpon>AddTeacherForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\EditForms\EditBindStudent.resx">
+      <DependentUpon>EditBindStudent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\EditForms\EditTopicForm.resx">
       <DependentUpon>EditTopicForm.cs</DependentUpon>
